add skills to user and change age to birthdate
