# internal/models/user.go
@@ -6,19 +6,19 @@ import (
 )
 
 type User struct {
-	ID                 *uuid.UUID  `gorm:"type:uuid;default:uuid_generate_v4();primary_key"`
-	Name               string      `gorm:"type:varchar(100);not null"`
-	Email              string      `gorm:"type:varchar(100);uniqueIndex;not null"`
-	Password           []byte      `gorm:"type:varchar(100);not null"`
-	IsAdmin            bool        `gorm:"type:boolean;default:false"`
-	Skills             []UserSkill `gorm:"foreignKey:UserID;constraint:OnDelete:CASCADE"` //`gorm:"foreignKey:UserID;constraint:OnDelete:CASCADE"`
-	VerificationCode   string      `gorm:"type:varchar(100);not null"`
-	Verified           bool        `gorm:"not null"`
-	Age                int         `gorm:"type:integer"`
-	Gender             string      `gorm:"type:varchar(100);default A"`
-	Grade              int         `gorm:"type:integer"`
-	ContinuousProgress int         `gorm:"type:integer"`
-	CreatedAt          *time.Time  `gorm:"not null;default:now()"`
+	ID                 *uuid.UUID   `gorm:"type:uuid;default:uuid_generate_v4();primary_key"`
+	Name               string       `gorm:"type:varchar(100);not null"`
+	Email              string       `gorm:"type:varchar(100);uniqueIndex;not null"`
+	Password           []byte       `gorm:"type:varchar(100);not null"`
+	IsAdmin            bool         `gorm:"type:boolean;default:false"`
+	Skills             []*UserSkill `gorm:"foreignKey:UserID;constraint:OnDelete:CASCADE"` //`gorm:"foreignKey:UserID;constraint:OnDelete:CASCADE"`
+	VerificationCode   string       `gorm:"type:varchar(100);not null"`
+	Verified           bool         `gorm:"not null"`
+	Birthdate          time.Time    `gorm:"type:date"`
+	Gender             string       `gorm:"type:varchar(100);"`
+	Grade              int          `gorm:"type:integer"`
+	ContinuousProgress int          `gorm:"type:integer"`
+	CreatedAt          *time.Time   `gorm:"not null;default:now()"`
 }
 
 func (User) TableName() string {
@@ -42,12 +42,12 @@ func (Game) TableName() string {
 }
 
 type Skill struct {
-	Name         string      `gorm:"type:varchar(100);primary_key"`
-	FriendlyName string      `gorm:"type:varchar(100);not null;"`
-	Description  string      `gorm:"type:varchar(1000);"`
-	Games        []*Game     `gorm:"many2many:skill_game;constraint:OnDelete:CASCADE;"`
-	Users        []UserSkill `gorm:"foreignKey:SkillName;constraint:OnDelete:CASCADE;"`
-	CreatedAt    *time.Time  `gorm:"not null;default:now()"`
+	Name         string       `gorm:"type:varchar(100);primary_key"`
+	FriendlyName string       `gorm:"type:varchar(100);not null;"`
+	Description  string       `gorm:"type:varchar(1000);"`
+	Games        []*Game      `gorm:"many2many:skill_game;constraint:OnDelete:CASCADE;"`
+	Users        []*UserSkill `gorm:"foreignKey:SkillName;constraint:OnDelete:CASCADE;"`
+	CreatedAt    *time.Time   `gorm:"not null;default:now()"`
 }
 
 func (Skill) TableName() string {
